--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
 					    <p class="mb-0">博士，副教授，硕士生导师，现为陕西师范大学教育学院教育技术系教师。获法国中央理工计算机科学博士学位，目前从事智能交互、脑机交互、虚拟现实在教育中的应用等研究，著有专著1部，已有20余篇成果发表在领域内有影响力的国际会议及SCI期刊上，多篇SCI期刊审稿人，人工智能学会CAAI智能交互专委会委员，主持国家自然科学基金1项、陕西省自然科学基金1项等，参与多个项目.</p>
 				    </div>
 			    </section><!--//summary-section-->
+			     <div class="resume-body p-5">
+			    <section class="resume-section summary-section mb-5">
+				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">个人简介</h2>
+				    <div class="resume-section-content">
+					    <p class="mb-0">博士，副教授，硕士生导师，现为陕西师范大学教育学院教育技术系教师。获法国中央理工计算机科学博士学位，目前从事智能交互、脑机交互、虚拟现实在教育中的应用等研究，著有专著1部，已有20余篇成果发表在领域内有影响力的国际会议及SCI期刊上，多篇SCI期刊审稿人，人工智能学会CAAI智能交互专委会委员，主持国家自然科学基金1项、陕西省自然科学基金1项等，参与多个项目.</p>
+				    </div>
+			    </section><!--//summary-section-->
 			    <div class="row">
 				    <div class="col-lg-9">
 					    <section class="resume-section experience-section mb-5">
