--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                                                 <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-linkedin-in fa-fw"></i></span></a></li>
                                                 <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span></a></li>
                                                 <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-codepen fa-fw"></i></span></a></li>
-                                                <li><a href="#"><span class="fa-container text-center mr-2">
-
+                                                <li><a href="#"><span class="fa-container text-center mr-2"></i></span></a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
 					    
