--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 						    <ul class="resume-social list-unstyled">
                                                 <li class="mb-3"></i></span></a></li>
-                                                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-github-alt fa-fw"></i></span></a></li>
-                                                <li class="mb-3"><a href="#"><span class="fa-container text-center mr-2"><i class="fab fa-codepen fa-fw"></i></span></a></li>
+                                                <li class="mb-3"></i></span></a></li>
+                                                <li class="mb-3"></i></span></a></li>
                                                 <li></i></span></a></li>
 						    </ul>
 					    </div><!--//secondary-info-->
