--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<div class="resume-timeline position-relative">
 								    <article class="resume-timeline-item position-relative pb-5">
 
-																    									    <div class="resume-timeline-item-header mb-2">
+												    <div class="d-flex flex-column flex-md-row">				    									    <div class="resume-timeline-item-header mb-2">
 										
 										        <h3 class="resume-position-title font-weight-bold mb-1">Lead Developer</h3>
 										        <div class="resume-company-name ml-auto">Startup Hub</div>
