--- a/index.html
+++ b/index.html
@@ -63,20 +63,22 @@
 			    <div class="row">
 				    <div class="col-lg-9">
 					    <section class="resume-section experience-section mb-5">
-						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">教育经历</h2>
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">科研项目</h2>
 						    <div class="resume-section-content">
 							<div class="resume-timeline position-relative">
 								    <article class="resume-timeline-item position-relative pb-5">
 
 												    <div class="d-flex flex-column flex-md-row">				    									    <div class="resume-timeline-item-header mb-2">
 										
-										        <h3 class="resume-position-title font-weight-bold mb-1">Lead Developer</h3>
-										        <div class="resume-company-name ml-auto">Startup Hub</div>
+										        <h3 class="resume-position-title font-weight-bold mb-1">主持</h3>
+										        <div class="resume-company-name ml-auto"></div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">2018 - Present</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p>Role description goes here ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Donec pede justo, fringilla vel.</p>
+										    <p>1. 国家自然科学基金青年基金，在线学习自适应交互中认知负荷与学习情绪的脑电表征及认知状态的评估与调整</p>
+										    <p>2. 陕西省自然科学基金，在线学习中基于计算机视觉的注意力识别与智能交互研究</p>
+										      <p>3.  陕西师范大学中央高校基本科研基金，基于眼动和表情识别的MOOCs视频视觉注意力机制研究</p>
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 										    <p>Praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
 										    <ul>
