--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 												    <div class="d-flex flex-column flex-md-row">				    									    <div class="resume-timeline-item-header mb-2">
 										
-										        <h3 class="resume-position-title font-weight-bold mb-1">主持</h3>
+										        <h3 class="resume-position-title font-weight-bold mb-1"></h3>
 										        <div class="resume-company-name ml-auto"></div>
 										    </div><!--//row-->
 										    <div class="resume-position-time">2018 - Present</div>
@@ -78,7 +78,15 @@
 									    <div class="resume-timeline-item-desc">
 										    <p>1. 国家自然科学基金青年基金，在线学习自适应交互中认知负荷与学习情绪的脑电表征及认知状态的评估与调整</p>
 										    <p>2. 陕西省自然科学基金，在线学习中基于计算机视觉的注意力识别与智能交互研究</p>
-										      <p>3.  陕西师范大学中央高校基本科研基金，基于眼动和表情识别的MOOCs视频视觉注意力机制研究</p>
+										    <p>3. 陕西师范大学中央高校基本科研基金，基于眼动和表情识别的MOOCs视频视觉注意力机制研究</p>
+										    <p>4. 横向，基于EEG的人脑焦虑、抑郁情绪量化评价方法参与</p>
+										    <p>5. 陕西省自然科学基金，基于多分辨率特征的无线传感器网络能量最优化模型及求解算法研究</p>
+								                    <p>6. 横向，基于家居智能看护机器人的老人反常行为感知关键技术研究</p>
+										    <p>7. 横向，教师教育信息化能力研修平台资源建设及应用</p>
+										    <p>8. 参与法国“eGonomy”项⽬，为法国9个知名企业、研究所及博物馆合作项目，包括法国国家博物馆联合会(RMN)，该项目旨在通过用户行为分析来为大型图片数据库交互提供多模、自然、智能的交互。主要负责与实施用户活动追踪分析与探索模块。</p>
+										    <p>9. 参与德国电信与美国Mozilla基金会关于Firefox OS的合作项目，该项目旨在打造安全友好的Firefox智能手机系统。主要负责与实施监测与用户评估模块。
+
+    
 										    <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
 										    <p>Praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident.</p>
 										    <ul>
