--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 					    <section class="resume-section experience-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">科研项目</h2>
 						    <div class="resume-section-content">
-							<div class="resume-timeline position-relative">
-								    <article class="resume-timeline-item position-relative pb-5">
+							<div class="position-relative">
+								    <article class="resume-item position-relative pb-5">
 
 												    <div class="d-flex flex-column flex-md-row">				    									    <div class="resume-timeline-item-header mb-2">
 										
