--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
 										    <p>1. 国家自然科学基金青年基金，在线学习自适应交互中认知负荷与学习情绪的脑电表征及认知状态的评估与调整</p>
-										    <p>2. 陕西省自然科学基金，在线学习中基于计算机视觉的注意力识别与智能交互研究</p>
-										    <p>3. 陕西师范大学中央高校基本科研基金，基于眼动和表情识别的MOOCs视频视觉注意力机制研究</p>
+										    <div class="resume-position-time">期刊 2018 - Present</div>
+										    <p>1. Beyond Engagement: an EEG-based Methodology for Assessing User's Confusion in Educational Game (PDF) Zhou, Y., Xu, T., Li, S., Shi R. Universal Access in the Information Society, accepted, 2019</p>
+										    <p>2. User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones (PDF) Zhou, Y., Qi L., Raake A., Xu T., Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
 										    <p>4. 横向，基于EEG的人脑焦虑、抑郁情绪量化评价方法参与</p>
 										    <p>5. 陕西省自然科学基金，基于多分辨率特征的无线传感器网络能量最优化模型及求解算法研究</p>
 								                    <p>6. 横向，基于家居智能看护机器人的老人反常行为感知关键技术研究</p>
@@ -96,10 +97,10 @@
 												    			    									    <div class="resume-timeline-item-header mb-2">
 										
 										        
-										    <div class="resume-position-time">2018 - Present</div>
+										    <div class="resume-position-time">专著 2018 - Present</div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p>1. 国家自然科学基金青年基金，在线学习自适应交互中认知负荷与学习情绪的脑电表征及认知状态的评估与调整</p>
+										    <p>1. 基于上下文的智能感知交互模式与系统 周筠 徐韬 2015.11 陕西师范大学出版社 国家自然科学基金青年基金，在线学习自适应交互中认知负荷与学习情绪的脑电表征及认知状态的评估与调整</p>
 										    <p>2. 陕西省自然科学基金，在线学习中基于计算机视觉的注意力识别与智能交互研究</p>
 										    <p>3. 陕西师范大学中央高校基本科研基金，基于眼动和表情识别的MOOCs视频视觉注意力机制研究</p>
 										    <p>4. 横向，基于EEG的人脑焦虑、抑郁情绪量化评价方法参与</p>
