--- a/index.html
+++ b/index.html
@@ -110,7 +110,15 @@
 										    <p>8. Fall prediction based on biomechanics equilibrium using Kinect (PDF) Xu, T. Zhou, Y. International Journal of Distributed Sensor Networks, 13(4) 2017</p>
 										    <p>9. Smart Brain: an Intelligence Context Inference Engine for Context-aware Middleware (PDF)Xu, T. Zhou, Y., David, B., Chalon, R. International Journal of Sensor Networks, 22(3):145-157, 2016</p>
 
-
+                                                                                    <div class="resume-position-time">会议 </div>
+										    <p>1. Guess or Not? A Brain-Computer Interface<br/> Using EEG Signals for Revealing the Secret behind Scores. (VIDEO) (PDF) Xu, T., Zhou, Y., Wang Y., Zhao Z., Li S. In CHI Conference on Human Factors in Computing Systems Extended Abstracts (CHI’19 Extended Abstracts)</p>
+										    <p>2. User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones (PDF) Zhou, Y., Qi L., Raake A., Xu T., Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
+										    <p>3. Interaction on-the-go: a fine-grained exploration on wearable PROCAM interfaces and gestures in mobile situations (PDF) Zhou, Y., Xu, T., David, B., Chalon, R.Universal Access in the Information Society,15(2):1-15, 2015</p>
+										    <p>4. Innovative Wearable Interfaces: An Exploratory Analysis of Paper-based Interfaces with Camera-glasses Device Unit (PDF) Zhou, Y., Xu, T., David, B., Chalon, R. Journal of Personal and Ubiquitous Computing, 18(4):835-849, 2013</p>
+								                    <p>5. New Advances and Challenges of Fall Detection Systems: A Survey (PDF) Xu, T. Zhou, Y., Zhu, J Applied Science, 8(3) 2018</p>
+										    <p>6. Elders’ fall detection based on biometrics features by the depth camera (PDF) Xu, T. Zhou, Y. International Journal of Wavelets, Multiresolution and Information Processing, 16(2) 2018</p>
+										    <p>8. Fall prediction based on biomechanics equilibrium using Kinect (PDF) Xu, T. Zhou, Y. International Journal of Distributed Sensor Networks, 13(4) 2017</p>
+										    <p>9. Smart Brain: an Intelligence Context Inference Engine for Context-aware Middleware (PDF)Xu, T. Zhou, Y., David, B., Chalon, R. International Journal of Sensor Networks, 22(3):145-157, 2016</p>
     
 										    
 									    </div><!--//resume-timeline-item-desc-->
