--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
 										    <div class="resume-position-time">专著 </div>
 									    </div><!--//resume-timeline-item-header-->
 									    <div class="resume-timeline-item-desc">
-										    <p>1. 基于上下文的智能感知交互模式与系统 周筠 徐韬 2015.11 陕西师范大学出版社 国家自然科学基金青年基金，在线学习自适应交互中认知负荷与学习情绪的脑电表征及认知状态的评估与调整</p>
+										    <p>1. 基于上下文的智能感知交互模式与系统<br/>周筠 徐韬<br/>2015.11陕西师范大学出版社</p>
 										    <div class="resume-position-time">期刊 </div>
-										    <p>1. User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones (PDF) Zhou, Y., Qi L., Raake A., Xu T., Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
-										    <p>2. User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones (PDF) Zhou, Y., Qi L., Raake A., Xu T., Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
-										    <p>3. Interaction on-the-go: a fine-grained exploration on wearable PROCAM interfaces and gestures in mobile situations (PDF) Zhou, Y., Xu, T., David, B., Chalon, R.Universal Access in the Information Society,15(2):1-15, 2015</p>
-										    <p>4. Innovative Wearable Interfaces: An Exploratory Analysis of Paper-based Interfaces with Camera-glasses Device Unit (PDF) Zhou, Y., Xu, T., David, B., Chalon, R. Journal of Personal and Ubiquitous Computing, 18(4):835-849, 2013</p>
-								                    <p>5. New Advances and Challenges of Fall Detection Systems: A Survey (PDF) Xu, T. Zhou, Y., Zhu, J Applied Science, 8(3) 2018</p>
-										    <p>6. Elders’ fall detection based on biometrics features by the depth camera (PDF) Xu, T. Zhou, Y. International Journal of Wavelets, Multiresolution and Information Processing, 16(2) 2018</p>
-										    <p>8. Fall prediction based on biomechanics equilibrium using Kinect (PDF) Xu, T. Zhou, Y. International Journal of Distributed Sensor Networks, 13(4) 2017</p>
-										    <p>9. Smart Brain: an Intelligence Context Inference Engine for Context-aware Middleware (PDF)Xu, T. Zhou, Y., David, B., Chalon, R. International Journal of Sensor Networks, 22(3):145-157, 2016</p>
+										    <p>Beyond Engagement: an EEG-based Methodology for Assessing User's Confusion in Educational Game (PDF)<br/>Zhou, Y., Xu, T., Li, S., Shi R.<br/>Universal Access in the Information Society, accepted, 2019</p>
+										    <p>User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones (PDF) Zhou, Y., Qi L., Raake A., Xu T.<br/>Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
+										    <p>Interaction on-the-go: a fine-grained exploration on wearable PROCAM interfaces and gestures in mobile situations (PDF)<br/>Zhou, Y., Xu, T., David, B., Chalon, R.Universal Access in the Information Society,15(2):1-15, 2015</p>
+										    <p>Innovative Wearable Interfaces: An Exploratory Analysis of Paper-based Interfaces with Camera-glasses Device Unit (PDF)<br/>Zhou, Y., Xu, T., David, B., Chalon, R. Journal of Personal and Ubiquitous Computing, 18(4):835-849, 2013</p>
+								                    <p>New Advances and Challenges of Fall Detection Systems: A Survey (PDF)<br/>Xu, T. Zhou, Y., Zhu, J<br/>Applied Science, 8(3) 2018</p>
+										    <p>Elders’ fall detection based on biometrics features by the depth camera (PDF)<br/>Xu, T. Zhou, Y.<br/>International Journal of Wavelets, Multiresolution and Information Processing, 16(2) 2018</p>
+										    <p>Fall prediction based on biomechanics equilibrium using Kinect (PDF)<br/>Xu, T. Zhou, Y.<br/>International Journal of Distributed Sensor Networks, 13(4) 2017</p>
+										    <p>Smart Brain: an Intelligence Context Inference Engine for Context-aware Middleware (PDF)<br/>Xu, T. Zhou, Y., David, B., Chalon, R.<br/>International Journal of Sensor Networks, 22(3):145-157, 2016</p>
 
                                                                                     <div class="resume-position-time">会议 </div>
 										    <p>1. Guess or Not? A Brain-Computer Interface<br/> Using EEG Signals for Revealing the Secret behind Scores. (VIDEO) (PDF) Xu, T., Zhou, Y., Wang Y., Zhao Z., Li S. In CHI Conference on Human Factors in Computing Systems Extended Abstracts (CHI’19 Extended Abstracts)</p>
