--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp; Tools</h2>
 						    <div class="resume-section-content">
 						        <div class="resume-skill-item">
-							        <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
-							        <ul class="list-unstyled mb-4">
+							        <div class="resume-degree font-weight-bold">北京师范大学 获双学位学士（主修教育技术学，辅修英语）</div>
+								<div class="resume-degree font-weight-bold">北京交通大学 获教育技术学理学硕士 </div>
+								<div class="resume-degree font-weight-bold">法国里昂中央理工学校 获计算机科学博士学位 </div>
 								        
 								 
 					    <section class="resume-section education-section mb-5">
