--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 				    </div>
 				    <div class="col-lg-3">
 					    <section class="resume-section skills-section mb-5">
-						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp; Tools</h2>
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">教育经历</h2>
 						    <div class="resume-section-content">
 						        <div class="resume-skill-item">
-							        <div class="resume-degree font-weight-bold">北京师范大学 获双学位学士（主修教育技术学，辅修英语）</div>
-								<div class="resume-degree font-weight-bold">北京交通大学 获教育技术学理学硕士 </div>
-								<div class="resume-degree font-weight-bold">法国里昂中央理工学校 获计算机科学博士学位 </div>
+							        <div class="resume-degree-org">北京师范大学,获双学位学士（主修教育技术学，辅修英语）</div>
+								<div class="resume-degree-org">北京交通大学,获教育技术学理学硕士 </div>
+								<div class="resume-degree-org">法国里昂中央理工学校,获计算机科学博士学位 </div>
 								        
 								 
 					    <section class="resume-section education-section mb-5">
