--- a/index.html
+++ b/index.html
@@ -138,7 +138,8 @@
 							        <div class="resume-degree-org">北京师范大学,获双学位学士（主修教育技术学，辅修英语）</div>
 								<div class="resume-degree-org">北京交通大学,获教育技术学理学硕士 </div>
 								<div class="resume-degree-org">法国里昂中央理工学校,获计算机科学博士学位 </div>
-								        
+								           </ul>
+						    </div>
 								 
 					    <section class="resume-section education-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Education</h2>
