--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 								<div class="resume-degree-org">法国里昂中央理工学校,获计算机科学博士学位 </div>
 								           </ul>
 						    </div>
-								 
+								   </section><!--//education-section-->
 					    <section class="resume-section education-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Education</h2>
 						    <div class="resume-section-content">
