--- a/index.html
+++ b/index.html
@@ -175,6 +175,17 @@
 							    </ul>
 						    </div>
 					    </section><!--//education-section-->
+					    <section class="resume-section interests-section mb-5">
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">教授课程</h2>
+						    <div class="resume-section-content">
+							    <ul class="list-unstyled">
+								    <li class="mb-1">An Introduction to Programming Using Visual Basic</li>
+								    <li class="mb-1">HCI and E-learning Design Principles</li>
+								    <li class="mb-1">Educational Data mining </li>
+								    <li class="mb-1">Data Analysis and Machine Learning Techniques </li>
+							    </ul>
+						    </div>
+					    </section><!--//interests-section-->
 					    <section class="resume-section reference-section mb-5">
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Awards</h2>
 						    <div class="resume-section-content">
