--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					    </section><!--//education-section-->
 					   
 					     <section class="resume-section interests-section mb-5">
-						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">教授课程</h2>
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">硕士研究生</h2>
 						    <div class="resume-section-content">
 							    <ul class="list-unstyled">
 								    <li class="mb-1">2018 Shiqian Li Han Yang </li>
