--- a/about.html
+++ b/about.html
@@ -32,8 +32,8 @@
 				    <img class="mr-3 img-fluid picture mx-auto" src="assets/images/profile.jpg" alt="">
 				    <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 					    <div class="primary-info">
-						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">王子</h1>
-						    <div class="title mb-3">陕西师范大学 教育学院</div>
+						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Yun Zhou</h1>
+						    <div class="title mb-3">Associate Professor</div>
 						    <ul class="list-unstyled">
 							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>chouyun526@gmail.com</a></li>
 							    
@@ -54,9 +54,11 @@
 		            </header>
 		            <div class="resume-body p-5">
 			    <section class="resume-section summary-section mb-5">
-				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">个人简介</h2>
+				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Grants</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">博士，副教授，硕士生导师，现为陕西师范大学教育学院教育技术系教师。获法国中央理工计算机科学博士学位，目前从事智能交互、脑机交互、虚拟现实在教育中的应用等研究，著有专著1部，已有20余篇成果发表在领域内有影响力的国际会议及SCI期刊上，多篇SCI期刊审稿人，人工智能学会CAAI智能交互专委会委员，主持国家自然科学基金1项、陕西省自然科学基金1项等，参与多个项目.</p>
+					    <p> class="mb-0">National Natural Science Foundation of China (PI)<br/>The workload and learning emotions recognition using EEG-based brain-computer interface and the evaluation as well as adjustment of cognitive states in adaptive e-learning.</p>
+					    <p>Natural Science Foundation of Shaanxi Province (PI)<br/>Research on computer vision based attention recognition and intelligent interaction in E-learning.<p>
+
 				    </div>
 			    </section><!--//summary-section-->
 			    
