--- a/about.html
+++ b/about.html
@@ -56,7 +56,8 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Grants</h2>
 				    <div class="resume-section-content">
-					    <p>National Natural Science Foundation of China (PI)<br/>The workload and learning emotions recognition using EEG-based brain-computer interface and the evaluation as well as adjustment of cognitive states in adaptive e-learning.<br/>Natural Science Foundation of Shaanxi Province (PI)<br/>Research on computer vision based attention recognition and intelligent interaction in E-learning.<p>
+					    <p>National Natural Science Foundation of China (PI)<br/>The workload and learning emotions recognition using EEG-based brain-computer interface and the evaluation as well as adjustment of cognitive states in adaptive e-learning.
+				            <p>Natural Science Foundation of Shaanxi Province (PI)<br/>Research on computer vision based attention recognition and intelligent interaction in E-learning.<p>
 
 				    </div>
 			     </section><!--//summary-section-->
