--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
 				
 				    <div class="col-lg-3">
 					    <section class="resume-section skills-section mb-5">
-						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">education experience</h2>
+						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">education</h2>
 						    <div class="resume-section-content">
 						        <div class="resume-skill-item">
 							        <div class="resume-degree-org">Ph.D., Ecole Centrale de Lyon</div>
