--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Yun Zhou</h1>
 						    <div class="title mb-3">School of Education Shaanxi Normal University <br/>Associate Professor</div>
 						    <ul class="list-unstyled">
-							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>chouyun526@gmail.com<br><a href="about.html">中文版</a></li>
+							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>chouyun526@gmail.com<br><a href="index.html">中文版</a></li>
 							    
 						    </ul>
 					    </div><!--//primary-info-->
