--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					     <div class="secondary-info ml-md-auto mt-2">
 
 						    <ul class="resume-social list-unstyled">
-                                                <li class="mb-3"></i></span>英文版</a></li>
+                                                <li class="title mb-3"></i></span><a href="about.html"></a></li>
                                                 <li class="mb-3"></i></span></a></li>
                                                 <li class="mb-3"></i></span></a></li>
                                                 <li></i></span></a></li>
