--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				    <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 					    <div class="primary-info">
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">周筠 </h1>
-						    <div class="title mb-3">陕西师范大学 教育学院</div>
+						    <div class="title mb-3">副教授<br/>陕西师范大学 教育学院</div>
 						    <ul class="list-unstyled">
 							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>chouyun526@gmail.com </a></li>
 							    
