--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">education</h2>
 				    <div class="resume-section-content">
-					     <p class="mb->Ph.D., Ecole Centrale de Lyon<br/>M.E., Beijing jiaotong University<br/>B.E.(Educational Technology) & B.A.(English), Beijing Normal University</p>
+					     <p class="mb-0">Ph.D., Ecole Centrale de Lyon<br/>M.E., Beijing jiaotong University<br/>B.E.(Educational Technology) & B.A.(English), Beijing Normal University</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    
