--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 		            </header>
 		            <div class="resume-body p-5">
 			    <section class="resume-section summary-section mb-5">
-				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">个人简介</h2>
+				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">education</h2>
 				    <div class="resume-section-content">
 					    <p class="mb-0">Ph.D., Ecole Centrale de Lyon<br/>M.E., Beijing jiaotong University<br/>B.E.(Educational Technology) & B.A.(English), Beijing Normal University</p>
 				    </div>
