--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 						    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">公告</h2>
 						    <div class="resume-section-content">
 						        <div class="resume-skill-item">
-							        <div class="resume-degree-org">北京师范大学,获双学位学士（主修教育技术学，辅修英语）</div>
+							        <div class="resume-degree-org"></div>
 								
 								           </ul>
 						    </div>
