--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
 									 
 										    <p>Intelligent Interaction and Context-based IntelliSense system<br/>Zhou, Y., Xu, T.</p>
 										    <div class="resume-position-time">Selected Journal Articles</div>
-										    <p>Beyond Engagement: an EEG-based Methodology for Assessing User's Confusion in Educational Game (PDF)<br/>Zhou, Y., Xu, T., Li, S., Shi R.<br/>Universal Access in the Information Society, accepted, 2019</p>
+										    <p>Beyond Engagement: an EEG-based Methodology for Assessing User's Confusion in Educational Game <a href="assets/images/people1.jpg" download>(PDF)</a><br/>Zhou, Y., Xu, T., Li, S., Shi R.<br/>Universal Access in the Information Society, accepted, 2019</p>
 										    <p>User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones (PDF) Zhou, Y., Qi L., Raake A., Xu T.<br/>Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
 										    <p>Interaction on-the-go: a fine-grained exploration on wearable PROCAM interfaces and gestures in mobile situations (PDF)<br/>Zhou, Y., Xu, T., David, B., Chalon, R.Universal Access in the Information Society,15(2):1-15, 2015</p>
 										    <p>Innovative Wearable Interfaces: An Exploratory Analysis of Paper-based Interfaces with Camera-glasses Device Unit (PDF)<br/>Zhou, Y., Xu, T., David, B., Chalon, R. Journal of Personal and Ubiquitous Computing, 18(4):835-849, 2013</p>
