--- a/about.html
+++ b/about.html
@@ -56,7 +56,9 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">education</h2>
 				    <div class="resume-section-content">
-					    <p class="mb-0">Ph.D., Ecole Centrale de Lyon</p><p class="mb-0">M.E., Beijing jiaotong University</p><p class="mb-0">B.E.(Educational Technology) & B.A.(English), Beijing Normal University</p>
+					    <p>Ph.D., Ecole Centrale de Lyon</p>
+					    <p>M.E., Beijing jiaotong University</p>
+					    <p>B.E.(Educational Technology) & B.A.(English), Beijing Normal University</p>
 				    </div>
 			    </section><!--//summary-section-->
 			    
