--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 				    </div><!--//media-body-->
 			   </div><!--//media-->
 		            </header>
-		            <div class="resume-body p-5">
+		            <div class="col-lg-9">
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">education</h2>
 				    <div class="resume-section-content">
