--- a/about.html
+++ b/about.html
@@ -56,6 +56,16 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">education</h2>
 				    <div class="resume-section-content">
+					    <div class="position-relative">
+								    <article class="resume-item position-relative pb-5">
+
+												    <div class="d-flex flex-column flex-md-row">				    									    <div class="resume-timeline-item-header mb-2">
+										
+										        <h3 class="resume-position-title font-weight-bold mb-1"></h3>
+										        <div class="resume-company-name ml-auto"></div>
+										    </div><!--//row-->
+										    <div class="resume-position-time"></div>
+									    </div><!--//resume-timeline-item-header-->
 					    <p>Ph.D., Ecole Centrale de Lyon</p>
 					    <p>M.E., Beijing jiaotong University</p>
 					    <p>B.E.(Educational Technology) & B.A.(English), Beijing Normal University</p>
