--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
 			    <section class="resume-section summary-section mb-5">
 				    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">education</h2>
 				    <div class="resume-section-content">
+					    div class="d-flex flex-column flex-md-row">
 					    
 					    <p>Ph.D., Ecole Centrale de Lyon</p>
 					    <p>M.E., Beijing jiaotong University</p>
