--- a/about.html
+++ b/about.html
@@ -52,6 +52,7 @@
 				    </div><!--//media-body-->
 			   </div><!--//media-->
 		            </header>
+<div class="resume-body p-5">
 <div class="row">
 				    <div class="col-lg-9">
  		            
