--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 				    <div class="media-body p-4 d-flex flex-column flex-md-row mx-auto mx-lg-0">
 					    <div class="primary-info">
 						    <h1 class="name mt-0 mb-1 text-white text-uppercase text-uppercase">Yun Zhou </h1>
-						    <div class="title mb-3">Associate Professor<br/>School of Education Shaanxi Normal University</div>
+						    <div class="title mb-3">Associate Professor<br/>School of Education<br/>Shaanxi Normal University</div>
 						    <ul class="list-unstyled">
 							    <li class="mb-2"><a href="#"><i class="far fa-envelope fa-fw mr-2" data-fa-transform="grow-3"></i>chouyun526@gmail.com </a></li>
 							    
