--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 									    <div class="resume-timeline-item-desc">
 										     <p>北京师范大学 获双学位学士（主修教育技术学，辅修英语）</p>
 								                     <p>北京交通大学 获教育技术学理学硕士 </p>
-								                     <p class="mb-0">法国里昂中央理工学校 获计算机科学博士学位 </p>
+								                     <p>法国里昂中央理工学校 获计算机科学博士学位</p>
+										    <br/>
 										    
 			  </div><!--//resume-timeline-item-desc-->
 			
