--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 									
 									    <div class="resume-timeline-item-desc">
 										    
-									   <p>An Introduction to Programming Using Visual Basic</p>
-								    <p>HCI and E-learning Design Principles</p>
-								    <p>Educational Data mining</p>
-								    <p>Data Analysis and Machine Learning Techniques</p>
+									   <p>Visual Basic程序设计</p>
+								    <p>人机交互与在线学习设计原则</p>
+								    <p>教育数据挖掘 </p>
+								    <p>数据分析与机器学习</p>
 										      <br/>
 							    </div><!--//resume-timeline-item-desc-->
 									    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">研究领域</h2>
