--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 						    <ul class="resume-social list-unstyled">
                                                 <li class="title mb-3"></i></span><a href="about.html">English</a></li>
+				      <li class="title mb-3"></i></span><a href="about.html">EduEEGDB</a></li>
                                                 <li class="mb-3"></i></span></a></li>
                                                 <li class="mb-3"></i></span></a></li>
                                                 <li></i></span></a></li>
