--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					     <div class="secondary-info ml-md-auto mt-2">
 
 						    <ul class="resume-social list-unstyled">
-                                      <li class="title mb-3"></i></span><a href="about.html">English</a></i>  </span><a href="EduEEGDB.index.html">EduEEGDB</a></li>
+                                      <li class="title mb-3"></i></span><a href="about.html">English</a></i>  </span><a href="Edu.index.html">EduEEGDB</a></li>
 				      
                                                 <li class="mb-3"></i></span></a></li>
                                                 <li class="mb-3"></i></span></a></li>
