--- a/Edu.html
+++ b/Edu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap 4 project documentation theme for developers</title>
+    <title></title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,12 +44,12 @@
                 <div class="branding">
                     <h1 class="logo">
                         <span aria-hidden="true" class="icon_documents_alt icon"></span>
-                        <span class="text-highlight">Pretty</span><span class="text-bold">Docs</span>
+                        <span class="text-highlight">EduEEGDB</span><span class="text-bold"></span>
                     </h1>
                 </div><!--//branding-->
                 <div class="tagline">
-                    <p>Free Bootstrap 4 theme for your project documentation</p>
-                    <p>Designed with <i class="fas fa-heart"></i> for developers</p>
+                    <p>Educational EEG data base</p>
+                    <p><i class="fas fa-heart"></i> </p>
                 </div><!--//tagline-->
                 
 	             <div class="main-search-box pt-3 pb-4 d-inline-block">
