--- a/Edu.html
+++ b/Edu.html
@@ -49,7 +49,7 @@
                 </div><!--//branding-->
                 <div class="tagline">
                     <p>Educational EEG data base</p>
-                    <p><i class="fas fa-heart"></i> </p>
+                   /* <p><i class="fas fa-heart"></i> </p>*/
                 </div><!--//tagline-->
                 
 	             <div class="main-search-box pt-3 pb-4 d-inline-block">
