--- a/Edu.html
+++ b/Edu.html
@@ -81,7 +81,7 @@
             </div><!--//container-->
         </header><!--//header-->
         
-        <section class="cards-section text-center">
+       <!-- <section class="cards-section text-center">-->
             <div class="container">
                 <h2 class="title">Getting started is easy!</h2>
                 <div class="intro">
