--- a/Edu.html
+++ b/Edu.html
@@ -97,7 +97,9 @@
 			<div class="cta-container">
                         <a class="btn btn-primary btn-cta" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/prettydocs-free-bootstrap-theme-for-developers-and-startups/" target="_blank"><i class="fas fa-cloud-download-alt"></i> Download Now</a>
                    </div><!--//cta-container-->
-			
+			    <section class="cards-section text-center">
+            <div class="container">
+			 <h2 class="title"></h2>
                
         
  
