--- a/Edu.html
+++ b/Edu.html
@@ -83,12 +83,12 @@
         
       <section class="cards-section text-center">
             <div class="container">
-                <h2 class="title">Getting started is easy!</h2>
+                <h2 class="title">Educational EEG data base ABSTRACT</h2>
                 <div class="intro">
-                    <p>Welcome to prettyDocs. This landing page is an example of how you can use a card view to present segments of your documentation. You can customise the icon fonts based on your needs.</p>
+                    <p>The database of electroencephalogram project</p>
 			
 			<div class="cta-container">
-                        <a class="btn btn-primary btn-cta" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/prettydocs-free-bootstrap-theme-for-developers-and-startups/" target="_blank"><i class="fas fa-cloud-download-alt"></i> Download Now</a>
+                       <!-- <a class="btn btn-primary btn-cta" href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/prettydocs-free-bootstrap-theme-for-developers-and-startups/" target="_blank"><i class="fas fa-cloud-download-alt"></i> Download Now</a>
                    </div><!--//cta-container-->
 			    <section class="cards-section text-center">
             <div class="container">
