--- a/Edu.html
+++ b/Edu.html
@@ -83,6 +83,16 @@
         
       <section class="cards-section text-center">
             <div class="container">
+		      <div class="branding">
+                    <h1 class="logo">
+                        <span aria-hidden="true" class="icon_documents_alt icon"></span>
+                        <span class="text-highlight">EduEEGDB</span><span class="text-bold"></span>
+                    </h1>
+                </div><!--//branding-->
+                <div class="tagline">
+                    <p>Educational EEG data base</p>
+                
+                </div><!--//tagline-->
                 <h2 class="title">Educational EEG data base ABSTRACT</h2>
                 <div class="intro">
                     <p>The database of electroencephalogram project</p>
