--- a/Edu.html
+++ b/Edu.html
@@ -44,6 +44,7 @@
                 <div class="branding">
                     <h1 class="logo">
                         <span aria-hidden="true" class="icon_documents_alt icon"></span>
+			    <div style="padding-right:24px;">
                         <span class="text-highlight">EduEEGDB</span><span class="text-bold"></span>
                     </h1>
                 </div><!--//branding-->
