--- a/Edu.html
+++ b/Edu.html
@@ -45,6 +45,7 @@
                     <h1 class="logo">
                         <span aria-hidden="true" class="icon_documents_alt icon"></span>
 			    <div style="padding-right:24px;">
+				       <p>Educational EEG data base</p>
                         <span class="text-highlight">EduEEGDB</span><span class="text-bold"></span>
                     </h1>
                 </div><!--//branding-->
