--- a/Edu1.html
+++ b/Edu1.html
@@ -116,7 +116,11 @@
                     <div class="icon-holder">
                         <i class="fas fa-heart"></i>
                     </div>
-                   
+                    </div><!--//content-->
+                </div><!--//item-->               
+            </div><!--//row-->            
+        </div><!--//container-->
+    </section><!--//about-->
 
     
     <!-- ******CONTACT****** --> 
