--- a/Edu1.html
+++ b/Edu1.html
@@ -130,12 +130,12 @@
         <div class="container">
             <div class="contact-inner">
                 <h2 class="title  text-center">Contact</h2>
-                <p class="intro  text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
+               <!-- <p class="intro  text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
                 <div class="author-message">                      
                     <div class="profile">
                         <img class="img-fluid" src="assets/images/profile.png" alt="" />
                     </div><!--//profile-->
-                    <div class="speech-bubble">
+                    <!--<div class="speech-bubble">
                         <h3 class="sub-title">Love free Bootstrap themes and templates?</h3>
                         <p><a href="https://twitter.com/3rdwave_themes" target="_blank">Follow me on Twitter</a> so you don’t miss any future freebies! You can find all the freebies I made for developers <a href="https://themes.3rdwavemedia.com/bootstrap-templates/free/" target="_blank">here</a>.</p>
                         <p><strong>[Tip for developers]:</strong> If you take on freelance work you can put a tailored message here about your availability to attract potential clients. Be creative and good luck! :)</p> 
@@ -145,8 +145,8 @@
                             <span class="title">UX/UI Designer</span>
                         </div><!--//source-->
                     </div><!--//speech-bubble-->                        
-                </div><!--//author-message-->
-                <div class="clearfix"></div>
+               <!-- </div><!--//author-message-->
+               <!-- <div class="clearfix"></div>
                 <div class="info text-center">
                     <h4 class="sub-title">Get Connected</h4>
                     <ul class="social-icons list-inline">
@@ -155,7 +155,7 @@
                         
                         <li class="list-inline-item"><a href="https://medium.com/@3rdwave_themes/" target="_blank"><i class="fab fa-medium-m"></i></a></li>  
                         <li class="list-inline-item"><a href="https://dribbble.com/Xiaoying" target="_blank"><i class="fab fa-dribbble"></i></a></li>   
-                        <li class="list-inline-item last"><a href="https://themes.3rdwavemedia.com/contact/" target="_blank"><i class="fas fa-envelope"></i></a></li>              
+                        <li class="list-inline-item last"><a href="https://themes.3rdwavemedia.com/contact/" target="_blank"><i class="fas fa-envelope"></i></a></li>-->              
                     </ul>
                 </div><!--//info-->
             </div><!--//contact-inner-->
