--- a/Edu1.html
+++ b/Edu1.html
@@ -126,10 +126,10 @@
 
     
     <!-- ******CONTACT****** --> 
-    <section id="contact" class="contact section has-pattern">
+    <!--<section id="contact" class="contact section has-pattern">
         <div class="container">
             <div class="contact-inner">
-                <h2 class="title  text-center">Contact</h2>
+                <!--<h2 class="title  text-center">Contact</h2>
                <!-- <p class="intro  text-center">I hope you find this Bootstrap template useful. <br />Feel free to get in touch if you have any questions or suggestions.</p>
                 <div class="author-message">                      
                     <div class="profile">
@@ -156,11 +156,11 @@
                         <li class="list-inline-item"><a href="https://medium.com/@3rdwave_themes/" target="_blank"><i class="fab fa-medium-m"></i></a></li>  
                         <li class="list-inline-item"><a href="https://dribbble.com/Xiaoying" target="_blank"><i class="fab fa-dribbble"></i></a></li>   
                         <li class="list-inline-item last"><a href="https://themes.3rdwavemedia.com/contact/" target="_blank"><i class="fas fa-envelope"></i></a></li>-->              
-                    </ul>
+                    <!--</ul>
                 </div><!--//info-->
-            </div><!--//contact-inner-->
-        </div><!--//container-->
-    </section><!--//contact-->  
+           <!-- </div><!--//contact-inner-->
+        <!--</div><!--//container-->
+   <!-- </section><!--//contact-->  
       
     <!-- ******FOOTER****** --> 
     <footer class="footer">
