--- a/Edu1.html
+++ b/Edu1.html
@@ -112,9 +112,9 @@
     <section id="about" class="about section">
         <div class="container">
             <h2 class="title text-center">Educational EEG data base ABSTRACT</h2>
-            <p >The database of electroencephalogram project.</p>
-		<p>Posted on July 31, 2018 </p>
-<p>The dataset of this project consists of two parts: [Read More] .</p>
+            <p class="intro">The database of electroencephalogram project.</p>
+		 <p class="intro">Posted on July 31, 2018 </p>
+ <p class="intro">The dataset of this project consists of two parts: [Read More] .</p>
             <div class="row">
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
