--- a/Edu1.html
+++ b/Edu1.html
@@ -111,7 +111,8 @@
     <!-- ******ABOUT****** --> 
     <section id="about" class="about section">
         <div class="container">
-            <h2 class="title text-center">Educational EEG data base ABSTRACT<br/>The database of electroencephalogram project<br/>Posted on July 31, 2018<br/>The dataset of this project consists of two parts: [Read More] </h2>
+            <h2 class="title text-center">Educational EEG data base ABSTRACT</p>
+	<p class="intro  text-center">The database of electroencephalogram project<br/>Posted on July 31, 2018<br/>The dataset of this project consists of two parts: [Read More] </p>
             
 		 
 
