--- a/Edu1.html
+++ b/Edu1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Bootstrap 4 Theme for Developers</title>
+    <title>EduEEGDB</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,10 +58,10 @@
                     <ul class="nav navbar-nav">
                         <li class="nav-item sr-only"><a class="nav-link scrollto" href="#promo">Home</a></li>
                         <li class="nav-item"><a class="nav-link scrollto" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link scrollto" href="#features">Features</a></li>
+                        <!--<li class="nav-item"><a class="nav-link scrollto" href="#features">Features</a></li>
                         <li class="nav-item"><a class="nav-link scrollto" href="#docs">Docs</a></li>
                         <li class="nav-item"><a class="nav-link scrollto" href="#license">License</a></li>                        
-                        <li class="nav-item last"><a class="nav-link scrollto" href="#contact">Contact</a></li>
+                        <li class="nav-item last"><a class="nav-link scrollto" href="#contact">Contact</a></li>-->
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->
