--- a/abstract.html
+++ b/abstract.html
@@ -110,12 +110,13 @@
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
-            <h2 class="title text-center">Get Started</h2>            
+            <h2 class="title text-center">Educational EEG data base ABSTRACT</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">HTML</h3>
-                <p><a href="http://prismjs.com/" target="_blank">PrismJS</a> is used as the syntax highlighter here.</p>
-                <p>Below are the details of the custom PrismJS build used in this template. You can <a href="http://prismjs.com/download.html" target="_blank">build your own version</a> via their website should you need to.</p>
-                <ul class="list-unstyled">
+                <h3 class="sub-title text-center">The database of electroencephalogram project</h3>
+                <p><strong>The dataset of this project consists of two parts:</p>
+                <p></strong>1.Testing images.</strong>This part contains two kinds of static images. All these images are used to generate confused/non-confused emotions by visually stimulating the volunteer’s brain. One consists of 10 peaceful landscape pictures (Used to stimulate non-confusing emotion) and the other consists of 48 complicated reasoning problem pictures (Used to stimulate confusion emotion).</p>
+	    <p></strong>2.EEG data.</strong> When the volunteers are observing the testing images, eight sensors of the EEG headset collect their brainwave data at a frequency of 250Hz. The EEG data related to every image will be recorded in a single file. So there are 58 files in a experiment subject. Our project contains 25 subjects from 25 volunteers.</p>
+	    <ul class="list-unstyled">
                     <li><strong>Compression level:</strong> Minified</li>
                     <li><strong>Theme:</strong> Okaidia</li>
                     <li><strong>Languages:</strong> Markup, CSS, C-like, JavaScript, PHP and Python</li>
