--- a/abstract.html
+++ b/abstract.html
@@ -125,6 +125,7 @@
 		    <p>1.Showing the landscape pictures. Each picture lasts for 10s and no stop in the process.</p>
 		    <p>2.Showing the reasoning problem pictures. When volunteer is ready, the experiment begins. Each picture lasts up to 10s. If the volunteer has already choose an answer, the next picture will appear immediately.</p>
 		    <p>3.Confidence test. Replay the second part of the pictures, then the volunteer chooses the options that whether he or she comes up with the answer. So we can find out whether the volunteer is staying in confusion.</p>
+		    <h3>EEG Data</h3>
 		    </ul>
                 <div class="code-block">
                     <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
