--- a/Edu1.html
+++ b/Edu1.html
@@ -115,12 +115,12 @@
 		<p>The database of electroencephalogram project</p>
 		<p>Posted on July 31, 2018</p>
 		<p>The dataset of this project consists of two parts: [Read More] </p>
-             <p class="text-center">
+            <!-- <p class="text-center">-->
                     <a class="btn btn-cta-primary" href="assets/documents/05.pdf"target="_blank">Download</a>
                 </p>
 		 
 
-            <div class="row">
+          <!--  <div class="row">
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
                        <!-- <i class="fas fa-heart"></i>
