--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 									    </div><!--//resume-timeline-item-header-->
 						        <div class="resume-timeline-item-desc">
                                                         <P><a href="Edu1.html">Confusion EEG DB</a></P>
-                                                        <P><a href="forspatial.html">FORSpatial</a></P>
+                                                        <P><a href="FORSpatial.html">FORSpatial</a></P>
 						        </div>
 								   
 								      
