--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
 										    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">科研项目</h2>
 									      <div class="resume-timeline-item-desc">
 									     <div class="resume-position-time">主持</div>
-										    <p>1. 国家自然科学基金青年基金，在线学习自适应交互中认知负荷与学习情绪的脑电表征及认知状态的评估与调整</p>
-										    <p>2. 陕西省自然科学基金，在线学习中基于计算机视觉的注意力识别与智能交互研究</p>
-										    <p>3. 陕西师范大学中央高校基本科研基金，基于眼动和表情识别的MOOCs视频视觉注意力机制研究</p>
+										    <p>1. 国家自然科学基金面上项目，智能教学系统中基于脑机接口的困惑情绪识别与双向调节策略研究</p>
+										    <p>2. 国家自然科学基金青年项目，在线学习自适应交互中认知负荷与学习情绪的脑电表征及认知状态的评估与调整</p>
+										    <p>3. 陕西省自然科学基金，在线学习中基于计算机视觉的注意力识别与智能交互研究</p>
+										    <p>4. 陕西师范大学中央高校基本科研基金，基于眼动和表情识别的MOOCs视频视觉注意力机制研究</p>
 									     <div class="resume-position-time">参与</div>
 										    <p>1. 横向，基于EEG的人脑焦虑、抑郁情绪量化评价方法参与</p>
 										    <p>2. 陕西省自然科学基金，基于多分辨率特征的无线传感器网络能量最优化模型及求解算法研究</p>
@@ -144,6 +145,7 @@
 									 
 										    <p>基于上下文的智能感知交互模式与系统<br/>周筠 徐韬<br/>2015.11陕西师范大学出版社</p>
 										    <div class="resume-position-time">期刊 </div>
+										    <p>Decode Brain System: A Dynamic Adaptive Convolutional Quorum Voting Approach for Variable-Length EEG Data  (PDF)<br/>Xu, T., Zhou, Y., Hou, Z., Zhang W.<br/>Complexity, 2020:1-9, 2020</p>
 										    <p>Beyond Engagement: an EEG-based Methodology for Assessing User's Confusion in Educational Game (PDF)<br/>Zhou, Y., Xu, T., Li, S., Shi R.<br/>Universal Access in the Information Society, accepted, 2019</p>
 										    <p>User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones <a href="assets/documents/01.pdf" download>(PDF)</a><br/>Zhou, Y., Qi L., Raake A., Xu T.<br/>Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
 										    <p>Interaction on-the-go: a fine-grained exploration on wearable PROCAM interfaces and gestures in mobile situations <a href="assets/documents/02.pdf" download>(PDF)</a><br/>Zhou, Y., Xu, T., David, B., Chalon, R.Universal Access in the Information Society,15(2):1-15, 2015</p>
