--- a/about.html
+++ b/about.html
@@ -119,8 +119,8 @@
 									 
 										    <p>Intelligent Interaction and Context-based IntelliSense system<br/>Zhou, Y., Xu, T.</p>
 										    <div class="resume-position-time">Selected Journal Articles</div>
-										    <p>Decode Brain System: A Dynamic Adaptive Convolutional Quorum Voting Approach for Variable-Length EEG Data <br/>Xu, T., Zhou, Y., Hou, Z., Zhang, W.<br/>Complexity, 2020:1-9, 2020</p>
-										    <p>Beyond Engagement: an EEG-based Methodology for Assessing User's Confusion in Educational Game <br/>Zhou, Y., Xu, T., Li, S., Shi R.<br/>Universal Access in the Information Society, accepted, 2019</p>
+										    <p>Decode Brain System: A Dynamic Adaptive Convolutional Quorum Voting Approach for Variable-Length EEG Data <a href="assets/documents/14.pdf" download>(PDF)</a><br/>Xu, T., Zhou, Y., Hou, Z., Zhang, W.<br/>Complexity, 2020:1-9, 2020</p>
+										    <p>Beyond Engagement: an EEG-based Methodology for Assessing User's Confusion in Educational Game <a href="assets/documents/13.pdf" download>(PDF)</a><br/>Zhou, Y., Xu, T., Li, S., Shi R.<br/>Universal Access in the Information Society, accepted, 2019</p>
 										    <p>User Attitudes and Behaviors towards Personalized Control of Privacy Settings on Smartphones <a href="assets/documents/01.pdf" download>(PDF)</a><br/>Zhou, Y., Qi L., Raake A., Xu T.<br/>Piekarska M., Zhang X. Concurrency and Computation Practice and Experience, online, 2018</p>
 										    <p>Interaction on-the-go: a fine-grained exploration on wearable PROCAM interfaces and gestures in mobile situations <a href="assets/documents/02.pdf" download>(PDF)</a><br/>Zhou, Y., Xu, T., David, B., Chalon, R.Universal Access in the Information Society,15(2):1-15, 2015</p>
 										    <p>Innovative Wearable Interfaces: An Exploratory Analysis of Paper-based Interfaces with Camera-glasses Device Unit <a href="assets/documents/03.pdf" download>(PDF)</a><br/>Zhou, Y., Xu, T., David, B., Chalon, R. Journal of Personal and Ubiquitous Computing, 18(4):835-849, 2013</p>
