--- a/about.html
+++ b/about.html
@@ -105,7 +105,7 @@
 										    <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Grants</h2>
 									      <div class="resume-timeline-item-desc">
 									     <div class="resume-position-time"></div>
-										    <p>National Natural Science Foundation of China (PI)<br/>Research on recognition and tow-way regulation strategies of confused emotion based on brain computer interface in intelligent teaching system</p>
+										    <p>National Natural Science Foundation of China (PI)<br/>Research on Recognition of Confusion with BCI and Tow-way Regulation Strategies in Intelligent Tutoring System</p>
 										    <p>National Natural Science Foundation of China (PI)<br/>The workload and learning emotions recognition using EEG-based brain-computer interface and the evaluation as well as adjustment of cognitive states in adaptive e-learning</p>
 										    <p>Natural Science Foundation of Shaanxi Province (PI)<br/>Research on computer vision based attention recognition and intelligent interaction in E-learning</p>
 										    <br/>
