--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
 										    <div class="resume-position-time"></div>
 									    </div><!--//resume-timeline-item-header-->
 						        <div class="resume-timeline-item-desc">
-                                                        <P><a href="Edu1.html">Confusion EEG DB</a></P>
+							<P>Confusion EEG DB</P>	
+                                                        <!-- <P><a href="Edu1.html">Confusion EEG DB</a></P> -->
                                                         <P><a href="FORSpatial.html">FORSpatial</a></P>
 						        </div>
 								   
